tests/miniJava/pos/001268_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( ! 0 ) if ( 0 ) { } else { } } }
