tests/miniJava/neg/006562_mutation.MiniJava
class java { public static void Main ( String [ ] void ) { { } } }
